src/objects/Form__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <formula>TEXT( DOAApprovalRequest__r.ApprovalStatus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetInvestmentForwardLoss__c</fullName>
        <inlineHelpText>Bid Phase - Budget / Investment / Forward Loss</inlineHelpText>
        <label>Budget/Investment/Forward Loss</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSBC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CS-BC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSEIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CS-EIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaptureManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capture Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FormsCaptureManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientOwner__c</fullName>
        <inlineHelpText>Client / Owner (include contract holder, funding agency, ultimate owner and limitations of each entity or the contractual framework)</inlineHelpText>
        <label>Client / Owner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Committee__c</fullName>
        <label>Committee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContingentLiabilities__c</fullName>
        <inlineHelpText>Contingent Liabilities (including Guarantors)</inlineHelpText>
        <label>Contingent Liabilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corporate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCSAPAC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCS - APAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCSAmericas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCS-Americas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCSEMEAI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCS - EMEA/I</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOAApprovalRequest__c</fullName>
        <label>DOA Approval Request</label>
        <referenceTo>DOAApprovalRequest__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DeliveryType__c</fullName>
        <label>Delivery Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoATriggers__c</fullName>
        <inlineHelpText>DoA Triggers (if applicable Risk Committee Conditions from previous reviews)</inlineHelpText>
        <label>DoA Triggers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndMarket__c</fullName>
        <label>End Market</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinancialsReward__c</fullName>
        <inlineHelpText>Financials / Reward (describe program capex, AECOM and JV if applicable: Revenue, Cash Flow, Working Capital and ROI)</inlineHelpText>
        <label>Financials / Reward</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GroupBusinessLine__c</fullName>
        <inlineHelpText>Group / Business Line (include lead and secondary AECOM participants, their role and status of ICA):</inlineHelpText>
        <label>Group / Business Line</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InsuranceFramework__c</fullName>
        <inlineHelpText>Insurance Framework</inlineHelpText>
        <label>Insurance Framework</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JustificationReviewCategoryChange__c</fullName>
        <label>Justification for Review Category Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MeetingDate__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NonProjectRelatedMatters__c</fullName>
        <label>Non Project Related Matters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ORMReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ORM Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Forms (ORM Reviewers)</relationshipLabel>
        <relationshipName>FormsOrmReviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ORMRiskMitigationDiscussion__c</fullName>
        <inlineHelpText>ORM Risk / Mitigation Discussion  (including delivery, technical, legal, tax, E&amp;C, HR, IT, Tax, Treasury, Insurance, SH&amp;E, Resilience, etc..)</inlineHelpText>
        <label>ORM Risk / Mitigation Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectChampion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Champion</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Forms (Project Champion)</relationshipLabel>
        <relationshipName>FormsProjectChamp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectDescStrategicIntent__c</fullName>
        <inlineHelpText>Project Description and Strategic Intent</inlineHelpText>
        <label>Project Description and Strategic Intent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectLocation__c</fullName>
        <label>Project Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>DOAApprovalRequest__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposedReviewCategoryChange__c</fullName>
        <label>Proposed Review Category Change</label>
        <picklist>
            <picklistValues>
                <fullName>C-0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReasonForRequest__c</fullName>
        <label>Reason for Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReviewCategory__c</fullName>
        <formula>DOAApprovalRequest__r.Project__r.ProjectReviewCategory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RiskCommitteeConditions__c</fullName>
        <inlineHelpText>Risk Committee Conditions</inlineHelpText>
        <label>Risk Committee Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdParties__c</fullName>
        <inlineHelpText>Third Parties (sub-contractors and supply chain)</inlineHelpText>
        <label>Third Parties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <label>Version Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WinStrategyUniqueSellProposal__c</fullName>
        <inlineHelpText>Win Strategy / Unique Sell Proposal</inlineHelpText>
        <label>Win Strategy / Unique Sell Proposal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Form</label>
    <nameField>
        <displayFormat>Form-{0}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <recordTypes>
        <fullName>ORMMemo</fullName>
        <active>true</active>
        <description>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</description>
        <label>ORM Memo</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCST</fullName>
        <active>true</active>
        <description>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia volupta</description>
        <label>RCST</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFA</fullName>
        <active>true</active>
        <description>sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum</description>
        <label>RFA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EcoFormCannotBeChangedInSubmitOrApprove</fullName>
        <active>true</active>
        <description>The form cannot be changed during approval submission or once approved</description>
        <errorConditionFormula>OR(ApprovalStatus__c = &quot;Approved&quot;,ApprovalStatus__c = &quot;Submitted&quot;)</errorConditionFormula>
        <errorMessage>The form cannot be changed during approval or once approved</errorMessage>
    </validationRules>
</CustomObject>